--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,10 @@
     border: 1px solid #464644;
     padding: 40px;
     border-radius: 5px;
-    box-shadow: 5px 5px 10px;
-    background: #dce5ff;
-    position: relative;
 }
 .goods-item:hover{
-    background-color: yellow;
+    background-color: rgb(205, 219, 196);
     cursor: pointer;
-    color: red;
-   
 }
 .cart-button{
     margin-right: 25px;
@@ -40,20 +35,12 @@ p{
 }
 .wrap-cart{
     display: flex;
-    justify-content: start;
-    height: 50px;
-    margin-bottom: 35px;
+    justify-content: space-between;
 }
 
 .fa-shopping-cart{
     font-size: 40px;
-    color: rgb(0, 0, 0);
-}
-.fa-shopping-cart:hover{
-    color: rgb(219, 206, 206);
-}
-.fa-shopping-cart:active{
-    color: rgb(202, 189, 189);
+    color: green;
 }
 .li-menu{
     width: 30%;
@@ -65,20 +52,17 @@ p{
 }
 .cart-button{
     border: none;
-    background: #ff4444;
+    background: white;
 }
 .cart-button:hover{
-    background: #ff4444;
+    background: lightcyan;
 }
 .menu-ul{
     width: 95%;
     margin-bottom: 15px;
 }
 .button-cart{
-    height: 50px;
-    background: #ff4444;
-    width: 5%;
-    text-align: center;
+    height: 15px;
 }
 ul {
     list-style: none; /*убираем маркеры списка*/
@@ -109,55 +93,3 @@ ul {
   li {
     float:left; /*Размещаем список горизонтально для реализации меню*/
   }
-  .parent-add {
-    position: absolute;
-    top: 350px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    margin-left: 50px;
-  }
-  /* .parent-add:hover .a-class {
-    color: #ffffff;
-    font-size: 13px;
-    font-weight: 700;
-    border: 1px solid #ffffff;
-    padding: 15px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-
-  } */
-  .goods-item:hover .parent-add {
-    display: flex;
-}
-
-.a-class{    
-    color: white;
-    background-color: #4caf50;
-    border-radius: 10px;
-    border: 2px solid white;
-    box-sizing: border-box;
-    line-height: 25px;
-}
-.a-class:hover{
-    background-color: white;
-    color: black;
-    border-radius: 10px;
-    text-decoration: none;
-    border: 2px solid white;
-    box-sizing: border-box;
-   
-}
-.parent-add:hover {
-    background-color: yellow;
-    color: black;
-}
-img{
-    width: 200px;
-    height: 200px;
-}
-.span-price{
-    color: red;
-    font-weight: 700;
-}
